--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main_cl_activityContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".activities.MainActivity"
-    android:id="@+id/activity_main_cl_activityContainer">
+    tools:context=".activities.MainActivity">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,9 +33,9 @@
             android:id="@+id/activity_main_tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/raleway_semibold"
             android:text="Title"
             android:textColor="@color/white"
-            android:fontFamily="@font/raleway_semibold"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -78,17 +78,6 @@
             app:layout_constraintVertical_bias="0.571"
             app:srcCompat="@drawable/sort_icon" />
 
-        <ImageView
-            android:id="@+id/activity_main_iv_close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:padding="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/close_icon" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -97,8 +86,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/activity_main_cv_bottomAppbarContainer"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_main_cl_topAppbar">
 
     </FrameLayout>
@@ -111,17 +100,15 @@
         android:layout_gravity="bottom"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/activity_main_bnv_bottomAppbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:labelVisibilityMode="unlabeled"
             android:layoutDirection="ltr"
-            android:background="@color/white"
-
+            app:labelVisibilityMode="unlabeled"
             app:menu="@menu/bottom_navigation_menu" />
 
     </androidx.cardview.widget.CardView>
