--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -80,7 +80,7 @@
                 android:layout_marginEnd="35dp"
                 android:textColorHint="@color/darkGray2"
                 app:errorEnabled="true"
-                app:hintEnabled="true"
+                app:hintEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
@@ -104,7 +104,8 @@
                 android:layout_height="wrap_content"
                 android:textColorHint="@color/darkGray2"
                 app:errorEnabled="true"
-                app:hintEnabled="true"
+                app:hintEnabled="false"
+                android:layout_marginTop="12dp"
                 app:layout_constraintEnd_toEndOf="@+id/fragment_contact_us_il_emailContainer"
                 app:layout_constraintStart_toStartOf="@+id/fragment_contact_us_il_emailContainer"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_contact_us_il_emailContainer">
@@ -128,7 +129,8 @@
                 android:layout_height="wrap_content"
                 android:textColorHint="@color/darkGray2"
                 app:errorEnabled="true"
-                app:hintEnabled="true"
+                app:hintEnabled="false"
+                android:layout_marginTop="12dp"
                 app:layout_constraintEnd_toEndOf="@+id/fragment_contact_us_il_subjectContainer"
                 app:layout_constraintStart_toStartOf="@+id/fragment_contact_us_il_subjectContainer"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_contact_us_il_subjectContainer">
@@ -148,14 +150,15 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
-                android:id="@+id/fragment_contact_us_tv_save"
+                android:id="@+id/fragment_contact_us_tv_send"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
                 android:layout_marginBottom="30dp"
                 android:background="@drawable/login_btn"
+                android:fontFamily="@font/raleway_semibold"
                 android:gravity="center"
                 android:text="@string/send"
-                android:fontFamily="@font/raleway_semibold"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="16sp"
@@ -163,7 +166,8 @@
                 app:layout_constraintEnd_toEndOf="@+id/fragment_contact_us_il_messageContainer"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/fragment_contact_us_il_messageContainer"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/fragment_contact_us_il_messageContainer"
+                app:layout_constraintVertical_bias="1.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
