--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -23,129 +23,170 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="35dp"
-                android:layout_marginTop="35dp"
                 android:layout_marginEnd="35dp"
                 android:orientation="vertical"
+                android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/fragment_edit_profile_il_nameContainer"
+                    android:id="@+id/fragment_edit_profile_il_fullNameContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:errorEnabled="true"
-                    app:hintEnabled="true">
+                    app:hintEnabled="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/fragment_edit_profile_et_name"
+                        android:id="@+id/fragment_edit_profile_et_fullName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/lightGray"
                         android:ems="10"
-                        android:hint="@string/name"
-                        android:textSize="14sp"
                         android:fontFamily="@font/raleway_medium"
-                        android:textAlignment="viewStart"
+                        android:hint="@string/fullName"
                         android:inputType="textPersonName"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp"
                         android:paddingBottom="15dp"
+                        android:textAlignment="viewStart"
                         android:textColor="@color/darkGray"
-                        android:textColorHint="@color/darkGray" />
+                        android:textColorHint="@color/darkGray"
+                        android:textSize="14sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/fragment_edit_profile_il_emailContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
                     app:errorEnabled="true"
-                    app:hintEnabled="true">
+                    app:hintEnabled="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/fragment_edit_profile_et_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
                         android:backgroundTint="@color/lightGray"
                         android:ems="10"
-                        android:hint="@string/email"
-                        android:textSize="14sp"
                         android:fontFamily="@font/raleway_medium"
-                        android:textAlignment="viewStart"
+                        android:hint="@string/email"
                         android:inputType="textEmailAddress"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp"
                         android:paddingBottom="15dp"
+                        android:textAlignment="viewStart"
                         android:textColor="@color/darkGray"
-                        android:textColorHint="@color/darkGray" />
+                        android:textColorHint="@color/darkGray"
+                        android:textSize="14sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <LinearLayout
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/fragment_edit_profile_il_civilIdContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    app:errorEnabled="true"
+                    app:hintEnabled="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
-                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
-                        android:id="@+id/fragment_edit_profile_ccp_countryCode"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:backgroundTint="@color/lightGray"
-                        android:gravity="center"
-                        android:paddingEnd="12dp"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/poppins_regular"
-                        app:ccp_defaultCode="965"
-                        app:ccp_defaultNameCode="KW"
-                        app:ccp_hideNameCode="true"
-                        app:ccp_showFlag="false" />
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/fragment_edit_profile_il_mobileContainer"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/fragment_edit_profile_et_civilId"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        app:errorEnabled="true"
-                        app:hintEnabled="true">
+                        android:backgroundTint="@color/lightGray"
+                        android:ems="10"
+                        android:fontFamily="@font/raleway_medium"
+                        android:hint="@string/civilId"
+                        android:inputType="number"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:paddingBottom="15dp"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/darkGray"
+                        android:textColorHint="@color/darkGray"
+                        android:textSize="14sp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/fragment_edit_profile_et_mobile"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:backgroundTint="@color/lightGray"
-                            android:ems="10"
-                            android:hint="@string/mobile"
-                            android:textSize="14sp"
-                            android:fontFamily="@font/raleway_medium"
-                            android:textAlignment="viewStart"
-                            android:inputType="phone"
-                            android:paddingStart="8dp"
-                            android:paddingEnd="8dp"
-                            android:paddingBottom="15dp"
-                            android:textColor="@color/darkGray"
-                            android:textColorHint="@color/darkGray" />
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/fragment_edit_profile_il_mobileContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:errorEnabled="true"
+                    app:hintEnabled="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView3">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/fragment_edit_profile_et_mobile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/lightGray"
+                        android:ems="10"
+                        android:fontFamily="@font/raleway_medium"
+                        android:hint="@string/mobile"
+                        android:inputType="phone"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:paddingBottom="15dp"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/darkGray"
+                        android:textColorHint="@color/darkGray"
+                        android:textSize="14sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/fragment_edit_profile_il_userNameContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:errorEnabled="true"
+                    app:hintEnabled="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView3">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/fragment_edit_profile_et_userName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/lightGray"
+                        android:ems="10"
+                        android:fontFamily="@font/raleway_medium"
+                        android:hint="@string/userName"
+                        android:inputType="textPersonName"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:paddingBottom="15dp"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/darkGray"
+                        android:textColorHint="@color/darkGray"
+                        android:textSize="14sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+              <TextView
+                    android:id="@+id/fragment_edit_profile_tv_save"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:background="@drawable/done_btn_larg"
+                    android:fontFamily="@font/raleway_semibold"
+                    android:gravity="center"
+                    android:text="@string/save"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/fragment_edit_profile_tv_save"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/login_btn"
-                android:gravity="center"
-                android:text="@string/save"
-                android:fontFamily="@font/raleway_semibold"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/linearLayout"
-                app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
