--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,26 +9,26 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:fillViewport="true">
-        
+        android:fillViewport="true"
+        android:scrollbars="none">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/fragment_login_cl_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            
+
 
             <TextView
                 android:id="@+id/fragment_login_tv_changeLang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/language"
-                android:drawableEnd="@drawable/lang_icon_blue"
-                android:textColor="@color/blue"
-                android:drawablePadding="8dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="12dp"
+                android:drawableEnd="@drawable/lang_icon_blue"
+                android:drawablePadding="8dp"
                 android:padding="15dp"
+                android:text="@string/language"
+                android:textColor="@color/blue"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,66 +43,67 @@
                 app:srcCompat="@drawable/logo" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/fragment_login_il_emailMobileContainer"
+                android:id="@+id/fragment_login_il_mobileContainer"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
                 android:layout_marginTop="75dp"
+                android:layout_marginEnd="32dp"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 app:errorEnabled="true"
-                app:hintEnabled="true"
+                app:hintEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/fragment_login_et_emailMobile"
+                    android:id="@+id/fragment_login_et_mobile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/lightGray" 
-                    android:hint="@string/emailOrMobile"
+                    android:backgroundTint="@color/lightGray"
                     android:fontFamily="@font/raleway_medium"
-                    android:textSize="14sp"
+                    android:hint="@string/mobile"
+                    android:inputType="phone"
                     android:paddingBottom="15dp"
                     android:textAlignment="viewStart"
-                    android:inputType="text" />
+                    android:textSize="14sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/fragment_login_il_passContainer"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 app:errorEnabled="true"
-                app:hintEnabled="true"
-                app:layout_constraintEnd_toEndOf="@+id/fragment_login_il_emailMobileContainer"
-                app:layout_constraintStart_toStartOf="@+id/fragment_login_il_emailMobileContainer"
-                app:layout_constraintTop_toBottomOf="@+id/fragment_login_il_emailMobileContainer">
+                app:hintEnabled="false"
+                app:layout_constraintEnd_toEndOf="@+id/fragment_login_il_mobileContainer"
+                app:layout_constraintStart_toStartOf="@+id/fragment_login_il_mobileContainer"
+                app:layout_constraintTop_toBottomOf="@+id/fragment_login_il_mobileContainer">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/fragment_login_et_pass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/lightGray"
-                    android:hint="@string/password"
-                    android:textSize="14sp"
                     android:fontFamily="@font/raleway_medium"
+                    android:hint="@string/password"
+                    android:paddingBottom="15dp"
                     android:textAlignment="viewStart"
-                    android:paddingBottom="15dp" />
+                    android:textSize="14sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            
+
             <TextView
                 android:id="@+id/fragment_login_tv_forgetPass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="38dp"
+                android:fontFamily="@font/raleway_regular"
                 android:text="@string/forgetPassword"
                 android:textColor="@color/gray"
-                android:layout_marginTop="48dp"
-                android:fontFamily="@font/raleway_regular"
                 app:layout_constraintEnd_toEndOf="@+id/fragment_login_il_passContainer"
                 app:layout_constraintStart_toStartOf="@+id/fragment_login_il_passContainer"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_login_il_passContainer" />
@@ -112,12 +112,13 @@
                 android:id="@+id/fragment_login_tv_login"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="45dp"
                 android:background="@drawable/login_btn"
+                android:fontFamily="@font/raleway_semibold"
                 android:gravity="center"
                 android:text="@string/login"
-                android:fontFamily="@font/raleway_semibold"
+                android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:layout_marginTop="45dp"
                 app:layout_constraintEnd_toEndOf="@+id/fragment_login_il_passContainer"
                 app:layout_constraintStart_toStartOf="@+id/fragment_login_il_passContainer"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_login_tv_forgetPass" />
@@ -126,12 +127,13 @@
                 android:id="@+id/fragment_login_tv_signUp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/signup_btn"
+                android:fontFamily="@font/raleway_semibold"
                 android:gravity="center"
                 android:text="@string/signup"
+                android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:layout_marginTop="24dp"
-                android:fontFamily="@font/raleway_semibold"
                 app:layout_constraintEnd_toEndOf="@+id/fragment_login_tv_login"
                 app:layout_constraintStart_toStartOf="@+id/fragment_login_tv_login"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_login_tv_login" />
@@ -139,8 +141,8 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:background="@color/blue"
                 android:layout_marginEnd="12dp"
+                android:background="@color/blue"
                 app:layout_constraintBottom_toBottomOf="@+id/fragment_login_tv_"
                 app:layout_constraintEnd_toStartOf="@+id/fragment_login_tv_"
                 app:layout_constraintStart_toStartOf="parent"
@@ -150,11 +152,11 @@
                 android:id="@+id/fragment_login_tv_"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/or"
+                android:layout_marginTop="42dp"
                 android:fontFamily="@font/raleway_regular"
                 android:gravity="center"
+                android:text="@string/or"
                 android:textColor="@color/blue"
-                android:layout_marginTop="42dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_login_tv_signUp" />
@@ -162,8 +164,8 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:background="@color/blue"
                 android:layout_marginStart="12dp"
+                android:background="@color/blue"
                 app:layout_constraintBottom_toBottomOf="@+id/fragment_login_tv_"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/fragment_login_tv_"
@@ -175,20 +177,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:fontFamily="@font/raleway_regular"
                 android:text="@string/continueAsGuest"
                 android:textColor="@color/blue"
-                android:fontFamily="@font/raleway_regular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/fragment_login_tv_"
                 app:layout_constraintVertical_bias="0.0" />
-            
+
         </androidx.constraintlayout.widget.ConstraintLayout>
-        
+
     </ScrollView>
-    
-    <include layout="@layout/loading"/>
+
+    <include layout="@layout/loading" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
