--- a/app/src/main/res/layout/fragment_packages.xml
+++ b/app/src/main/res/layout/fragment_packages.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/bg_packages" />
+        app:srcCompat="@drawable/packages_bg" />
 
 
     <androidx.core.widget.NestedScrollView
