--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -84,6 +84,7 @@
                     android:layout_margin="10dp"
                     android:backgroundTint="@color/lightGray"
                     android:ems="10"
+                    android:gravity="center"
                     android:paddingBottom="10dp"
                     android:textSize="14sp"
                     android:fontFamily="@font/raleway_semibold"
@@ -99,6 +100,7 @@
                     android:layout_margin="10dp"
                     android:backgroundTint="@color/lightGray"
                     android:ems="10"
+                    android:gravity="center"
                     android:textSize="14sp"
                     android:paddingBottom="10dp"
                     android:fontFamily="@font/raleway_semibold"
@@ -114,6 +116,7 @@
                     android:layout_margin="10dp"
                     android:backgroundTint="@color/lightGray"
                     android:ems="10"
+                    android:gravity="center"
                     android:textSize="14sp"
                     android:paddingBottom="10dp"
                     android:fontFamily="@font/raleway_semibold"
@@ -129,6 +132,7 @@
                     android:layout_margin="10dp"
                     android:backgroundTint="@color/lightGray"
                     android:ems="10"
+                    android:gravity="center"
                     android:textSize="14sp"
                     android:paddingBottom="10dp"
                     android:fontFamily="@font/raleway_semibold"
@@ -140,19 +144,30 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/fragment_verification_tv_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/fillCodeFields"
+                android:textColor="@color/red"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+            <TextView
                 android:id="@+id/fragment_verification_tv_verify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
                 android:background="@drawable/small_btn"
+                android:fontFamily="@font/raleway_semibold"
                 android:gravity="center"
                 android:text="@string/verify"
-                android:fontFamily="@font/raleway_semibold"
+                android:layout_marginTop="30dp"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+                app:layout_constraintTop_toBottomOf="@+id/fragment_verification_tv_error" />
 
             <LinearLayout
                 android:id="@+id/fragment_verification_ll_resendCode"
