--- a/app/src/main/res/layout/item_attributes.xml
+++ b/app/src/main/res/layout/item_attributes.xml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/item_product_attribute_tv_name"
-        android:layout_width="wrap_content"
+        android:id="@+id/item_attribute_tv_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="0.5"
         android:layout_marginStart="28dp"
         android:text="Type"
         android:textColor="@color/blue"
         android:textSize="16sp"
         android:fontFamily="@font/raleway_semibold"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/item_product_attribute_tv_value"
-        android:layout_width="wrap_content"
+        android:id="@+id/item_attribute_tv_value"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="0.5"
         android:text="Toyota"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/raleway_regular"
-        android:layout_marginStart="100dp"
         android:textColor="@color/darkGray2"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/item_product_attribute_tv_name"
-        app:layout_constraintStart_toEndOf="@+id/item_product_attribute_tv_name"
-        app:layout_constraintTop_toTopOf="@+id/item_product_attribute_tv_name" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintBottom_toBottomOf="@+id/item_attribute_tv_name"
+        app:layout_constraintStart_toEndOf="@+id/item_attribute_tv_name"
+        app:layout_constraintTop_toTopOf="@+id/item_attribute_tv_name" />
+</LinearLayout>
