--- a/app/src/main/res/layout/item_faq.xml
+++ b/app/src/main/res/layout/item_faq.xml
@@ -5,37 +5,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:gravity="center">
 
-    <TextView
-        android:id="@+id/item_faq_tv_question"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/up_arrow"
-        android:drawablePadding="40dp"
-        android:text="How do I participate in different auctions?"
-        android:textColor="@color/black"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:textAlignment="viewStart"
-        android:fontFamily="@font/raleway_medium"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <TextView
+            android:id="@+id/item_faq_tv_question"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="How do I participate in different auctions?"
+            android:textColor="@color/black"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="24dp"
+            android:textAlignment="viewStart"
+            android:layout_weight=".8"
+            android:fontFamily="@font/raleway_medium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/item_faq_iv_arrow"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/up_arrow"
+            android:layout_weight=".2" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/item_faq_tv_answer"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/faq_box"
-        android:padding="15dp"
-        android:textAlignment="viewStart"
-        android:layout_marginTop="20dp"
         android:fontFamily="@font/raleway_regular"
+        android:padding="15dp"
         android:text="You can enter in the different auctions you must enter the details of the auctions displayed in one of the screens and then enter the amount you want to bid and then press the bid button"
+        android:textAlignment="viewStart"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/item_faq_tv_question"
-        app:layout_constraintStart_toStartOf="@+id/item_faq_tv_question"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_faq_tv_question" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/lightGray"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_faq_tv_answer"
+        app:layout_constraintVertical_bias="0.0" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/item_faq_v_details"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
