--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -6,15 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    app:cardElevation="7dp">
+    app:cardElevation="7dp"
+    android:id="@+id/item_notification_cv_container">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/item_notification_iv_indicator"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/noti_side_border_red" />
@@ -33,28 +36,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/item_notification_tv_title"
+        android:id="@+id/item_notification_tv_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="60dp"
-        android:lines="2"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/raleway_regular"
-        android:textAlignment="viewStart"
         android:text="There are 5 new bids on your auction please check it..."
+        android:textAlignment="viewStart"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/item_notification_tv_date"
         app:layout_constraintTop_toBottomOf="@+id/item_notification_tv_date" />
 
-
     <View
+        android:id="@+id/view"
         android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:background="@color/gray"
+        android:layout_height="1dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/lightGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_notification_iv_indicator" />
+        app:layout_constraintTop_toBottomOf="@+id/item_notification_tv_message" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
