--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toTopOf="@+id/linearLayout3">
 
         <TextView
-            android:id="@+id/item_product_tv_remainingTime"
+            android:id="@+id/item_product_tv_startTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/time_icon"
@@ -87,6 +87,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/view4"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="12dp"
@@ -121,5 +122,13 @@
         app:layout_constraintStart_toStartOf="@+id/item_product_riv_productImage"
         app:layout_constraintTop_toTopOf="@+id/item_product_riv_productImage" />
 
+    <View
+        android:id="@+id/item_product_v_details"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
